fixed register and login logical errors and thymeleaf template issues